FIX Z-Index of the Picked Coruse
- set picked course max z-index

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -119,14 +119,15 @@ section.container{
     right: 1px;
     top: 1px;
 
-    font-size: 16px;
-    font-weight: bold;
     border-radius: 50%;
+    font-weight: bold;
+    font-size: 16px;
     width: 16px;
     height: 16px;
     line-height: 14px;
     text-align: center;
     vertical-align: middle;
+    color: #202020;
     background-color: rgba(224,224,224,0.7);
 }
 
